--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <section class="section discount">
         <div class="overlay">
           <video class="video">
-            <source src="./images/hero-2.m4v" type="video/mp4" />
+            <source src="./images/hero-2.mp4" type="video/mp4" />
             <source src="./images/hero-2.webm" type="video/webm" />
           </video>
         </div>
